# AVOCADO

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  actors.py  alpha_experiment.py  bayesian_optimization.py  circle_tests.py  docker-compose.yml  experiments.py  plot_data_results.py  qualitative_experiments.py  render_sim_videos.py  requirements.txt  setup.py  simple_example.py  simple_example_v2.py  simple_example_v3.py  simple_simulator.py  times_experiment.py
src/: Agent.cpp  Agent.h  CMakeLists.txt  Definitions.h  KdTree.cpp  KdTree.h  Obstacle.cpp  Obstacle.h  RVO.h  RVOSimulator.cpp  RVOSimulator.h  Vector2.h  avocado.cpp  avocado.pyx
